# box-editor-view

./: .gitignore  MANIFEST.in  README.md  piano.box  pikachu.box  pyproject.toml
box_editor_view/: __init__.py  __main__.py  api.py  audio.py  box_file.py  box_hash.py  editor.py  geometry.py  gpu.py  platform_window.py  render_png.py  voxel_mesh.py
docs/: developer-api.md
scripts/: make_piano_demo.py  make_pikachu_demo.py  measure_fps.py
tests/: test_api.py  test_audio.py  test_box_file.py  test_cli.py  test_editor_state.py  test_geometry.py  test_gpu.py  test_platform_window.py
