[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "box-editor-view"
version = "0.1.7"
description = "A Panda3D voxel .box editor."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GGN_2015" }]
license = { text = "MIT" }
dependencies = [
    "panda3d>=1.10.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
box-editor-view = "box_editor_view.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["box_editor_view*"]
exclude = ["scripts*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
